--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,35 @@
-fastapi
-uvicorn
-langchain
-langchain-google-genai
-langchain-community
-sqlalchemy
-pandas
-matplotlib
-python-dotenv
-requests
+# Web Framework
+fastapi[standard]==0.115.6
+uvicorn[standard]==0.34.0
+
+# Database
+sqlalchemy[asyncio]==2.0.36
+aiosqlite==0.20.0
+asyncpg==0.30.0
+
+# Redis Cache
+redis[hiredis]==5.2.1
+
+# AI/LLM
+google-generativeai==0.8.3
+langchain==0.3.16
+langchain-google-genai==2.0.8
+langchain-openai==0.2.14
+litellm==1.56.4
+
+# SQL Parsing & Validation
+sqlparse==0.5.3
+
+# Configuration
+pydantic-settings==2.7.1
+python-dotenv==1.0.1
+
+# Embeddings
+sentence-transformers==3.3.1
+numpy==2.2.2
+
+# Development
+pytest==8.3.4
+pytest-asyncio==0.25.2
+pytest-cov==6.0.0
+httpx==0.27.2
